# spglsl

./: .gitignore  README.md  package-lock.json  package.json  spglsl.code-workspace
angle-make/: CMakeLists.txt  angle-source-files.txt
project/: .clang-tidy  .editorconfig  .eslintignore  .eslintrc  .gitignore  .mocharc.js  .prettierignore  CMakeLists.txt  package-lock.json  package.json  spglsl.code-workspace  tsconfig.json  tsn
project/conformance/: conformance-test-list.ts  conformance-test-runner.ts  conformance-test-server-start.ts  conformance-test-server.ts
project/conformance/client/: harness.js
project/conformance/khronos/conformance2/attribs/: gl-vertex-attrib-i-render.html
project/conformance/khronos/conformance2/buffers/: uniform-buffers.html
project/conformance/khronos/conformance2/extensions/: promoted-extensions-in-shaders.html
project/conformance/khronos/conformance2/glsl3/: forbidden-operators.html  frag-depth.html  invalid-invariant.html  misplaced-version-directive.html  sampler-no-precision.html  sequence-operator-returns-non-constant.html  shader-linking.html  tricky-loop-conditions.html
project/conformance/khronos/js/: glsl-conformance-test.js  glsl-constructor-tests-generator.js  glsl-generator.js  webgl-test-utils.js
project/conformance/khronos/resources/: boolUniformShader.vert  floatUniformShader.vert  fragmentShader.frag  glsl-generator.js  intArrayUniformShader.vert  intUniformShader.vert  matUniformShader.vert  noopUniformShader.frag  noopUniformShader.vert  samplerUniformShader.frag  structUniformShader.vert  vertexShader.vert
project/cpp/spglsl/: spglsl-compile-options.cpp  spglsl-compile-options.h  spglsl-compiled-info.h  spglsl-init.cpp  spglsl-init.h  spglsl.cpp
project/cpp/spglsl/core/: hash-stream.cpp  hash-stream.h  math-utils.cpp  math-utils.h  non-copyable.h  string-utils.cpp  string-utils.h
project/cpp/spglsl/spglsl-angle/: spglsl-angle-call-dag.cpp  spglsl-angle-call-dag.h  spglsl-angle-compiler-handle.cpp  spglsl-angle-compiler-handle.h  spglsl-angle-compiler.cpp  spglsl-angle-compiler.h  spglsl-angle-mangler.cpp  spglsl-angle-mangler.h  spglsl-angle-webgl-output.cpp  spglsl-angle-webgl-output.h  spglsl-module-metadata.cpp  spglsl-module-metadata.h  spglsl-scoped-traverser.cpp  spglsl-scoped-traverser.h
project/cpp/spglsl/spglsl-angle/lib/: spglsl-glsl-writer.h  (+10 more)
project/scripts/: angle-source-files.js  build-debug.sh  build-release.sh  build-ts.sh  cmake-clean.sh  conformance-test-server.sh  conformance-tests.sh  generate-float-lookup.ts  install-deps.sh  make-debug.sh  test-debug.sh  test-release.sh  test.sh
project/test/: angle-regression.test.ts  float-math.test.ts  glsl-info-log.test.ts  glsl-info-log.testx.ts  regression.test.ts  swizzle.test.ts
project/test/globals/: const-defs.frag  const-defs.test.ts  rename-globals.test.ts
project/test/lib/: test-shader.ts
project/test/lib/tttt/: t0.frag  t1.frag
project/test/mangle/: rename-globals.frag  rename-globals.test.ts
project/test/non-passing-shaders/: cimqs-GLES3_1.frag  include-WEBGL2.frag  ntabwed-WEBGL.frag  oip-GLES3_1.frag  rqdifa-GLES3_1.frag
project/test/non-passing-shaders/sampler-video-WEBGL/: svwebglcbsit2d-GLES3_1.frag  svwebglcbsities300-GLES3_1.frag
project/test/optimizations/: blocks-optimizations.test.ts  do-not-write-precision-if-no-variables.test.ts  minify-optimizations.test.ts  operators-optimizations.test.ts
project/test/shaders/: test-shaders.ts
project/test/shaders/angle/: tricky-WEBGL2.frag
project/test/shaders/custom/: array-equality-WEBGL2.frag  comma-precedence-WEBGL2.frag  complicated.frag  csm-test.frag  included.glsl  island-not-found.frag  loop-with-side-effects-WEBGL2.frag  my.frag  t.frag  t0.frag  t1.frag  unnamed-uniform-structs.frag
(+99 files in other folders)
